# SudokuSolverRust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  wasm.yml
github-pages/: index.html  styles.css
standard-constraints/: Cargo.toml
standard-constraints/src/: arrow_sum_constraint.rs  chess_constraint.rs  fpuzzles_parser.rs  lib.rs  message_handler.rs  non_repeat_constraint.rs  orthogonal_pairs_constraint.rs  pencilmark_constraint.rs  prelude.rs  standard_pair_type.rs
standard-constraints/src/fpuzzles_parser/: fpuzzles_json.rs  fpuzzles_test_data.rs  prelude.rs
standard-constraints/src/message_handler/: message.rs  responses.rs
sudoku-solver-console/: Cargo.toml
sudoku-solver-console/src/: listener.rs  main.rs
sudoku-solver-console/src/listener/: client.rs  handlers.rs  ws.rs
sudoku-solver-lib/: Cargo.toml
sudoku-solver-lib/src/: board.rs  board_utility.rs  candidate_index.rs  candidate_links.rs  cell_index.rs  cell_utility.rs  constraint.rs  elimination_list.rs  house.rs  lib.rs  logic_result.rs  logical_step.rs  logical_step_desc.rs  logical_steps.rs  math.rs  prelude.rs  solver.rs  value_mask.rs
sudoku-solver-lib/src/logical_step/: all_naked_singles.rs  hidden_single.rs  logical_step_desc.rs  logical_step_desc_list.rs  logical_step_result.rs  macros.rs  naked_single.rs  prelude.rs  simple_cell_forcing.rs  step_constraints.rs
sudoku-solver-lib/src/solver/: cancellation.rs  logical_solve_result.rs  prelude.rs  single_solution_result.rs  solution_count_result.rs  solution_receiver.rs  solver_builder.rs  true_candidates_count_result.rs
sudoku-solver-wasm/: Cargo.toml  pack.bat  pack.toml
sudoku-solver-wasm/node/: .gitignore  index.js  package.json
sudoku-solver-wasm/node/public/: 404.html
sudoku-solver-wasm/src/: lib.rs  message.rs  responses.rs
user-scripts/: fpuzzles-sudokusolver-wasm-template.js  fpuzzles-sudokusolver-wasm-worker-template.js  fpuzzles-sudokusolver-wasm-worker.js  fpuzzles-sudokusolver-wasm.user.js
