[package]
name = "standard-constraints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku-solver-lib = { path="../sudoku-solver-lib" }
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz-str = { git = "https://github.com/dclamage/lz-str-rs" }
regex = "1"