[package]
name = "sudoku-solver-console"
authors = ["Rangsk (David Clamage)"]
description = "Sudoku variant solver utility."
repository = "https://github.com/dclamage/SudokuSolverRust"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku-solver-lib = { path = "../sudoku-solver-lib" }
standard-constraints = { path = "../standard-constraints" }
clap = { version = "3.2", features = ["derive"] }
colored = "2.0.0"
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false, features = ["executor"]}
uuid = { version = "1.1.2", features = ["v4", "serde"] }
itertools = "0.10.3"